hphp/hack/test/typecheck/reactive/rx_append1.php
<?hh // partial

<<__Rx>>
function a(Vector<int> $a): void {
  $a[] = 1;
}
